--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "@types/js-cookie": "^2.2.6",
+    "@types/jsonp": "^0.2.0",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
+    "jsonp": "^0.2.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "vue": "^3.0.0-0",
+    "vue-jsonp": "^2.0.0",
+    "vue-resource": "^1.5.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-beta.4",
     "vuex-module-decorators": "^1.0.1"
