--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myApp",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,16 +15,13 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "@types/js-cookie": "^2.2.6",
-    "@types/jsonp": "^0.2.0",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "^2.2.1",
-    "jsonp": "^0.2.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "vue": "^3.0.0-0",
-    "vue-jsonp": "^2.0.0",
-    "vue-resource": "^1.5.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-beta.4",
     "vuex-module-decorators": "^1.0.1"
@@ -47,6 +45,5 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
-  },
-  "description": "An Ionic project"
+  }
 }
