--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "^2.2.1",
     "node-sass": "^5.0.0",
+    "qrcode": "^1.4.4",
     "sass-loader": "^10.1.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
